// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket-\${random_id.root_mybucket_Id_7C344B74.hex}\\",
        \\"public_access_prevention\\": \\"inherited\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"google_storage_bucket_iam_member\\": {
      \\"root_mybucket_PublicAccessIamMember_53C8A9DA\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_mybucket_E5DAA363.name}\\",
        \\"member\\": \\"allUsers\\",
        \\"role\\": \\"roles/storage.objectViewer\\"
      }
    },
    \\"random_id\\": {
      \\"root_mybucket_Id_7C344B74\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "PublicAccessIamMember": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucketIamMember.StorageBucketIamMember",
                      "version": "5.0.3",
                    },
                    "id": "PublicAccessIamMember",
                    "path": "root/Default/my_bucket/PublicAccessIamMember",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket-\${random_id.root_mybucket_Id_7C344B74.hex}\\",
        \\"public_access_prevention\\": \\"enforced\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"google_storage_bucket_object\\": {
      \\"root_mybucket_Objectfile1txt_0E67FB99\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_mybucket_E5DAA363.id}\\",
        \\"content\\": \\"hello world\\",
        \\"name\\": \\"file1.txt\\"
      },
      \\"root_mybucket_Objectfile2txt_52FE0302\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_mybucket_E5DAA363.id}\\",
        \\"content\\": \\"boom bam\\",
        \\"name\\": \\"file2.txt\\"
      }
    },
    \\"random_id\\": {
      \\"root_mybucket_Id_7C344B74\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`bucket with two preflight objects 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucketObject.StorageBucketObject",
                      "version": "5.0.3",
                    },
                    "id": "Object-file1.txt",
                    "path": "root/Default/my_bucket/Object-file1.txt",
                  },
                  "Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucketObject.StorageBucketObject",
                      "version": "5.0.3",
                    },
                    "id": "Object-file2.txt",
                    "path": "root/Default/my_bucket/Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket-\${random_id.root_mybucket_Id_7C344B74.hex}\\",
        \\"public_access_prevention\\": \\"enforced\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"random_id\\": {
      \\"root_mybucket_Id_7C344B74\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`two buckets 1`] = `
"{
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket1_3E79F0B7\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket1-\${random_id.root_mybucket1_Id_B01C2071.hex}\\",
        \\"public_access_prevention\\": \\"enforced\\",
        \\"uniform_bucket_level_access\\": true
      },
      \\"root_mybucket2_CD3A8629\\": {
        \\"location\\": \\"US\\",
        \\"name\\": \\"my_bucket2-\${random_id.root_mybucket2_Id_E69E8F7F.hex}\\",
        \\"public_access_prevention\\": \\"enforced\\",
        \\"uniform_bucket_level_access\\": true
      }
    },
    \\"random_id\\": {
      \\"root_mybucket1_Id_B01C2071\\": {
        \\"byte_length\\": 4
      },
      \\"root_mybucket2_Id_E69E8F7F\\": {
        \\"byte_length\\": 4
      }
    }
  }
}"
`;

exports[`two buckets 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket1": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket1/Default",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket1/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket1",
                "path": "root/Default/my_bucket1",
              },
              "my_bucket2": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket2/Default",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-random.id.Id",
                      "version": "5.0.0",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket2/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket2",
                "path": "root/Default/my_bucket2",
              },
              "random": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-random.provider.RandomProvider",
                  "version": "5.0.0",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
